--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/output.css" rel="stylesheet" />
   </head>
-  <body class="bg-white-100 overflow-x-hidden">
-    <section class="w-full md:ml-[100px]">
+  <body class="bg-white-100 box-border overflow-x-hidden">
+    <section class="w-full md:ml-[100px] box-border overflow-x-hidden">
       <!-- Header -->
       <header class="py-6 w-full">
         <div
@@ -51,7 +51,7 @@
             >
           </nav>
           <div class="flex space-x-4 px-2">
-            <button class="relative" id="cartButton">
+            <button class="relative cursor-pointer" id="cartButton">
               <img src="./src/assets/icon-cart.svg" class="w-6" alt="Cart" />
 
               <span
@@ -69,7 +69,8 @@
           <!-- Mobile Menu -->
           <div
             id="mobileMenu"
-            class="hidden z-1001 fixed inset-y-0 left-0 w-64 bg-white py-15 md:hidden"
+            class="hidden fixed inset-y-0 left-0 w-64 bg-white py-15 md:hidden"
+            style="z-index: 4000"
           >
             <button
               id="closeMenu"
@@ -109,33 +110,70 @@
           id="currentImage"
         />
         <!-- Work on this Nigga -->
+        <div
+          id="lightBoxClone"
+          class="hidden absolute left-1/2 -translate-x-1/2 bg-white p-20 flex flex-col justify-between px-3"
+          style="height: 90%; width: 90%; z-index: 1001; top: 3%; border-radius: 20px;"
+        >
+          <div style="display: flex; width: 100%; background-color: black; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+            <div style="justify-self: flex-start;">
+              <span>Your Goods Are In my Crib</span>
+            </div>
+          </div>
+          <div class="flex cursor-pointer bg-orange-500 justify-center hover:bg-orange-600 border-solid-[2px] border-black" style="border-radius: 20px; width: 80px; margin-left: 10px;" id="exitButton">
+            <span>Go</span>
+            <span>Back</span>
+          </div>
+          <div class="flex flex-col">
+            <div class="flex justify-around align-middle">
+              <h1 class="text-5xl font-bold self-center">Successful</h1>
+            </div>
+            <h2 class="text-center text-gray-700">Your Goods are On The Way</h2>
+          </div>
+          <div></div>
+          <div></div>
+          <h4 class="text-center font-bold">Thanks For Shopping With Us.</h4>
+          <div></div>
+          <div></div>
+        </div>
         <!-- Cart Dropdown (lightBox) -->
         <div
           id="lightBox"
-          class="hidden absolute top-1/2 left-1/2 -translate-x-1/2 h-11/12 w-[24rem] bg-white rounded-lg z-[1003] p-20"
+          class="hidden absolute left-1/2 -translate-x-1/2 bg-white rounded-lg p-20 flex flex-col justify-between px-3"
+          style="height: 90%; width: 90%; z-index: 1001; top: 3%"
         >
           <!-- Cart Header -->
-          <h2 class="text-xl font-bold mb-4">Cart</h2>
-          <hr class="mb-4 border-gray-200" />
-
+          <div class="flex-0 flex-wrap">
+            <h2
+              class="text-xl font-bold mb-4"
+              style="padding-top: 15px; padding-left: 17px"
+            >
+              Cart
+            </h2>
+          </div>
+          <hr class="flex-1 mb-4 border-gray-200" />
           <!-- Filled Cart -->
-          <div id="filledCartDiv" class="hidden h-11/12">
-            <div class="flex items-center mb-6">
+          <div id="filledCartDiv" class="hidden flex-2 flex flex-col">
+            <div class="flex flex-0 items-center justify-around mb-6 px-12">
               <!-- Thumbnail -->
               <img
-                src="./src/assets/image-product-1-thumbnail.jpg"
+                src="./src/assets/image-product-2-thumbnail.jpg"
                 alt=""
-                class="w-4 h-4 rounded mr-3"
+                class="rounded mr-3 flex-0"
+                style="height: 100%; width: 20%"
               />
               <!-- Product Info -->
               <div class="flex-1">
-                <p class="text-gray-700 text-base">
+                <p class="text-gray-700 flex-wrap text-sm">
                   Fall Limited Edition Sneakers
                 </p>
                 <p class="text-gray-700 text-base">
                   $125.00 x
-                  <span id="countSpan">0</span>
-                  <span id="totalAmount" class="font-bold ml-1">$0.00</span>
+                  <span id="countSpan"></span>
+                  <span
+                    id="totalAmount"
+                    class="font-bold text-black ml-1"
+                  ></span>
                 </p>
               </div>
               <!-- Delete Icon -->
@@ -143,23 +181,36 @@
                 src="./src/assets/icon-delete.svg"
                 alt="Delete"
                 id="trashIcon"
-                class="h-4 w-4 cursor-pointer"
+                class="h-4 w-4 cursor-pointer flex-2"
               />
             </div>
-            <!-- Checkout Button -->
+          </div>
+          <!-- Checkout Button -->
+          <div
+            class="hidden flex flex-3 w-full justify-center py-6"
+            id="buttonDiv"
+          >
             <button
-              class="w-full bg-orange-500 text-white py-3 rounded-lg hover:bg-orange-600"
+              class="bg-orange-500 text-white py-3 rounded-lg hover:bg-orange-600"
+              style="width: 90%"
+              id="checkoutButton"
             >
               Checkout
             </button>
           </div>
-
+          <div class="hidden" id="troubleShootingDiv1"></div>
           <!-- Empty Cart -->
-          <div id="emptyCartDiv" class="hidden">
+          <div
+            id="emptyCartDiv"
+            class="hidden flex flex-2 items-center justify-center py-14"
+            style="justify-self: center"
+          >
             <p class="text-center text-gray-500 text-base">
               Your cart is empty.
             </p>
           </div>
+          <div class="hidden" id="troubleShootingDiv2"></div>
+          <div class="hidden" id="troubleShootingDiv3"></div>
         </div>
 
         <!-- Navigation Buttons -->
@@ -259,21 +310,17 @@
             <!-- Quantity Selector -->
             <div class="md:flex content-center mt-6 space-x-4">
               <div
-                class="w-full py-3 flex justify-between self-center items-center bg-gray-200 rounded-lg md: flex-[3]"
+                class="w-full py-4 flex justify-between self-center items-center bg-gray-200 rounded-lg md: py-3 flex-[3]"
               >
-                <img
-                  class="px-2 cursor-pointer"
-                  src="./src/assets/icon-minus.svg"
-                  id="minusIcon"
-                />
-                <span class="px-4" id="countDisplay"
+                <div id="minusIcon" class="cursor-pointer">
+                  <img class="px-2" src="./src/assets/icon-minus.svg" />
+                </div>
+                <span class="" id="countDisplay"
                   ><!--Fill me with your cum oh vanilla js --></span
                 >
-                <img
-                  class="px-2 cursor-pointer"
-                  src="./src/assets/icon-plus.svg"
-                  id="plusIcon"
-                />
+                <div id="plusIcon" class="cursor-pointer">
+                  <img class="px-2" src="./src/assets/icon-plus.svg" />
+                </div>
               </div>
               <div
                 class="cursor-pointer w-full py-4 mt-[10px] justify-center bg-orange-500 rounded-lg flex self-center items-center space-x-3 hover:bg-orange-600 md: flex-[7]"
